# thoughts

./: .change_status  .gitignore  CNAME  Makefile  README.md  convert_notebooks.sh  feed.xml  generate_blog.py  index.html  metadata.pk  move_blog.py  public_voit.css  publish.sh  pyproject.toml  readme.md  shell.nix  styles.css
about/: index.html
docs/: 19-01-2022-first-post.html  2021-01-30-Will the S&P 500 go above index 3800 by March 1st 2021?.html  2021-01-30-sp500.html  2021-09-14-bachelorTime.html  2023-04-10-causalDiscovery.html  2023-08-13-things.html  android-watch-gone.html  base-rate-fallacy.html  biology-datasets.html  cheap-labour-everywhere.html  chemistry-abstraction.html  citations.html  competitiveness.html  computer-setup.html  cous-cous.html  david-burns-clearerthinking.html  dumbell-courage.html  embryo-conflict.html  evolution.html  example-post.html  expertise-benchmark.html  fermi-estimates-gpt.html  fermi_estimates.html  figuring-out-yasnippet.html  first_blogpost.html  fn-remap.html  fun-biology.html  gpt-4-capability-enhancement.html  gwern.html  homology-wagner.html  human-taste-buds.html  imprinting-list.html  index.html  information-all-the-way-down.html  item-response-theory.html  journaling-prompts-emacs.html  keeping-ants.html  learning-brain-regions.html  migrating-from-lazyblorg.html  ourworldindata-exploration.html  (+23 more)
feeds/: lazyblorg-all.atom_1.0.links-and-content.xml  lazyblorg-all.atom_1.0.links-and-teaser.xml  lazyblorg-all.atom_1.0.links-only.xml
how-to-use-public-voit/: index.html
how-to-use-this-blog/: index.html
notebook_html/: 2021-01-30-sp500.html  2021-09-14-bachelorTime.html  2023-04-10-causalDiscovery.html
notebooks/: 2021-01-30-sp500.ipynb  2021-09-14-bachelorTime.ipynb  2023-04-10-causalDiscovery.ipynb  BA.csv  BA2.csv  CS.csv  (+6 more)
(+131 files in other folders)
