[tool.poetry]
name = "thoughts"
version = "0.1.0"
description = "Tassilo's blog"
authors = ["Tassilo Neubauer <46806445+sonofhypnos@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.4"
beautifulsoup4 = "^4.12.3"
nbconvert = "^7.16.4"
jupyter = "^1.1.1"
pypandoc = "^1.13"
markdown = "^3.7"
jupyterlab = "^4.4.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pypandoc = "^1.13"
pygments = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
